force-app/main/default/objects/MassUpdateExecution__c/MassUpdateExecution__c.object-meta.xml
<CustomObject>
    <label>Mass Update Execution</label>
    <nameField>
        <displayFormat>MUE-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Update Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>