force-app/main/default/objects/MassUpdateExecution__c/fields/QueryFilters__c.field-meta.xml
<CustomField>
    <fullName>QueryFilters__c</fullName>
    <label>Query Filters</label>
    <type>TextArea</type>
</CustomField>